--- a/index.html
+++ b/index.html
@@ -33,5 +33,17 @@
 	<a class="btn" href="">Saiba mais</a>
 </section>
 
+<section class="conheca-o-hotel">
+	<h3>Conheça o Hotel Paraiso</h3>
+	<p>Feche os olhos e imagine o paraíso. Um lugar no meio da Mata Atlântica e banhado pelo mar, onde você encontra paz, tranquilidade, conforto e comodidade.</p>
+	<hr>
+	<ul class="grid">
+		<li class="small" style="background-image: url('img/itacare-01.jpg');"></li>
+		<li class="large" style="background-image: url('img/itacare-02.jpg');"></li>
+		<li class="large" style="background-image: url('img/itacare-03.jpg');"></li>
+		<li class="small" style="background-image: url('img/itacare-04.jpg');"></li>
+	</ul>
+</section>
+
 </body>
 </html>
