--- a/index.html
+++ b/index.html
@@ -45,5 +45,40 @@
 	</ul>
 </section>
 
+<section class="caracteristicas">
+	<h3>Único hotel pé na areia de Itacaré</h3>
+	<p>Implantado em uma área completamente arborizada, o Hotel Paraíso é o único hotel pé na areia de Itacaré. Aqui o Mar será o seu companheiro e você terá as belezas da natureza.</p>
+	<hr>
+	<ul class="grid">
+		<li>
+			<i class="fas fa-location-arrow"></i>
+			<h4>Localização</h4>
+			<p>Localizada no sul da Bahia, entre o mar e a Mata Atlântica, Itacaré tem refrescantes praias belíssimas, muitas delas tão pequenas que nem aparecem no mapa.</p>
+		</li>
+		<li>
+			<i class="fas fa-gift"></i>
+			<h4>Pacotes e Ofertas</h4>
+			<p>Sabe aquele decontraído encontro com a família e amigos? Ou um momento relax? Nossa região conta com uma diversidade de espaços que proporcionam momentos inesquecíveis.</p>
+		</li>
+		<li>
+			<i class="fas fa-home"></i>
+			<h4>Acomodações</h4>
+			<p>Hotel Paraíso possui 29 unidades, divididas entre 11 chalés, 16 amplas suítes e 2 apartamentos, todas com TV a cabo, frigobar, além de varanda com rede.</p>
+		</li>				
+	</ul>
+</section>
+
+<section class="newsletter">
+	<h3>Newsletter</h3>
+	<p>Assine nossa newsletter para se manter atualizado com nossos serviços e a programação do hotel e da região.</p>
+	<hr>
+
+	<form>
+		<input type="text" placeholder="Email" name="">
+		<button>Cadastrar</button>
+	</form>
+
+</section>
+
 </body>
 </html>
